fixing text overflow

--- a/theme/moe/style/moe.css
+++ b/theme/moe/style/moe.css
@@ -5789,38 +5789,20 @@ a#choosetheme {
 
 .block_rolespecifichtml_button{
     background-position: 5% 50%, 0 0;
-    background-size: 15%, cover;
+    background-size: 13%, cover;
     background-repeat: no-repeat, no-repeat;
     color: #3c4845 ;
     font-weight: bolder;
     text-align:right;
-    display: inline-block;
     border: 1px solid #89b2ab;
     min-width: 80%;
-    font-size: 170%;    
+    font-size: 160%;    
     height: 42px;
     padding-right: 10px;
     padding-top: 13px;
-}
-
-.block_rolespecifichtml_main_block {
-    text-align: center;
-    }
-
-.block_rolespecifichtml_button{
-    background-position: 5% 50%, 0 0;
-    background-size: 15%, cover;
-    background-repeat: no-repeat, no-repeat;
-    color: #3c4845 ;
-    font-weight: bolder;
-    text-align:right;
-    display: inline-block;
-    border: 1px solid #89b2ab;
-    min-width: 80%;
-    font-size: 170%;    
-    height: 42px;
-    padding-right: 10px;
-    padding-top: 13px;
+    padding-left: 45px;
+    display: inline-table;
+    width: auto;
 }
 .Madrich{
     background-image:  url([[pix:block_links_for_moetopcoll|Madrich]]),url([[pix:block_links_for_moetopcoll|Kaftor_orada]]);
@@ -5951,7 +5933,6 @@ a#choosetheme {
 
 }
 
-<<<<<<< Upstream, based on alt_master
 @media ( max-width : 311px) {
 	#page-mod-glossary-view .glossarydisplay .entrybox div{
         height: 65px;
